--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 
 .menu-bar {
     background-color: grey;
+    margin-bottom: 10px;
 }
 
 .menu-bar button {
@@ -14,6 +15,8 @@ body {
 
 .code-space {
     outline: none;
+    counter-reset: line;
+    display: block;
 }
 
 .code-line {
@@ -22,4 +25,17 @@ body {
     margin-left: 1em;
     outline: none;
     color: #A6A7A6;
+    
 }
+
+.code-line::before {
+    margin-right: 3em;
+    counter-increment: line;
+    content: counter(line);
+}
+
+
+
+
+
+  
